# SchedulingAlgorithms

./: .gitignore  CMakeLists.txt  README  README.md  driver.c  list.c  list.h  output.txt  schedule_fcfs.c  schedule_priority.c  schedule_priority_rr.c  schedule_rr.c  schedule_sjf.c
